--- a/style.scss
+++ b/style.scss
@@ -11,18 +11,19 @@ License: GNU General Public License v3 or later.
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, featured-images, rtl-language-support, threaded-comments, translation-ready
 */
+
 /* Add your custom styles here */
+
 /* Basic styling to make them look like tags - Customize as needed */
 .influencer-niche-container .niche-term {
-  background: #f1f1f1;
-  padding: 2px 8px;
-  border-radius: 4px;
-  margin-right: 5px;
-  display: inline-block;
-  margin-bottom: 5px;
-  font-size: 0.9em; }
-
+    background: #f1f1f1;
+    padding: 2px 8px;
+    border-radius: 4px;
+    margin-right: 5px;
+    display: inline-block;
+    margin-bottom: 5px;
+    font-size: 0.9em;
+}
 .influencer-niche-container .niche-toggle:hover {
-  text-decoration: underline; }
-
-/*# sourceMappingURL=style.css.map */
+    text-decoration: underline;
+}
