--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     margin-right: 5px;
     font-size: 11px;
     text-transform: uppercase;
-    color: var(--e-global-color-primary); }
+    color: var(--e-global-color-primary);
+    padding: 8px;
+    font-family: Inter; }
 
 /*# sourceMappingURL=style.css.map */
