--- a/style.scss
+++ b/style.scss
@@ -28,5 +28,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
         font-size: 11px;
         text-transform: uppercase;
         color: var(--e-global-color-primary);
+        padding: 8px;
+        font-family: Inter;
     }
 }
