--- a/style.scss
+++ b/style.scss
@@ -31,4 +31,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
         padding: 8px;
         font-family: Inter;
     }
+    .niche-toggle {
+        font-size: 11px;
+    }
 }
