--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     height: 27px;
     border-radius: 50%;
     background-color: #EBEBEB;
-    color: #898989; }
+    color: #898989;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
