--- a/style.scss
+++ b/style.scss
@@ -37,5 +37,9 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
         border-radius: 50%;
         background-color: #EBEBEB;
         color: #898989;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
     }
 }
