--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     justify-content: center;
     cursor: pointer; }
 
-.influencer-name .elementor-heading-title svg {
-  margin-left: 15px;
+.influencer-name svg {
+  margin-left: 10px;
   margin-bottom: -3px; }
 
 /*# sourceMappingURL=style.css.map */
