--- a/style.scss
+++ b/style.scss
@@ -45,8 +45,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 }
 
 .influencer-name {
-    .elementor-heading-title svg {
-        margin-left: 15px;
+    svg {
+        margin-left: 10px;
         margin-bottom: -3px;
     }
 }
