--- a/style.scss
+++ b/style.scss
@@ -50,3 +50,9 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
         margin-bottom: -3px;
     }
 }
+
+.meta-country-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
