--- a/style.scss
+++ b/style.scss
@@ -57,3 +57,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     gap: 5px;
 }
 
+.influencer-loop-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 Columns */
+    gap: 20px;
+}
