--- a/style.scss
+++ b/style.scss
@@ -61,4 +61,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3 Columns */
     gap: 20px;
+    > div > div {
+        height: 100%;
+    }
 }
