--- a/style.scss
+++ b/style.scss
@@ -46,7 +46,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 
 
 .is-verified {
-    .influencer-name {
+    .influencer-name .elementor-heading-title {
         &:after {
             margin-left: 10px;
             margin-bottom: -3px;
