--- a/style.scss
+++ b/style.scss
@@ -133,7 +133,7 @@ $guide-pink: #f9a8d4;
         // The Trigger Button
         .dropdown-button {
             width: 100%;
-            padding: 12px 0 15px;
+            padding: 0 15px;
             background-color: $bg-input;
             border: 1px solid $border-color;
             border-radius: 6px;
@@ -153,8 +153,7 @@ $guide-pink: #f9a8d4;
 
             // Arrow Icon
             .arrow-holder {
-                padding-right: 11px;
-                padding-left: 11px;
+                padding: 15px 11px;
                 border-left: 1px solid $border-color;
             }
             .arrow {
