--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
       .filter-widget .dropdown-container .dropdown-menu.show {
         display: block; }
       .filter-widget .dropdown-container .dropdown-menu .dropdown-item {
-        padding: 10px 15px;
+        padding: 5px 10px;
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -147,6 +147,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
         .filter-widget .dropdown-container .dropdown-menu .dropdown-item:hover {
           background-color: #f3f4f6; }
         .filter-widget .dropdown-container .dropdown-menu .dropdown-item input[type="checkbox"] {
+          margin: 0;
           transform: scale(1.2);
           accent-color: #0f766e; }
   .filter-widget .tags-container {
