--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     position: relative; }
     .filter-widget .dropdown-container .dropdown-button {
       width: 100%;
-      padding: 0 15px;
+      padding-left: 15px;
       background-color: #f3f4f6;
       border: 1px solid #d1d5db;
       border-radius: 6px;
@@ -102,7 +102,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
       font-size: 1rem;
       color: #333333;
       box-sizing: border-box;
-      transition: border-color 0.2s; }
+      transition: border-color 0.2s;
+      gap: 10px; }
       .filter-widget .dropdown-container .dropdown-button:hover {
         border-color: #9ca3af; }
       .filter-widget .dropdown-container .dropdown-button .arrow-holder {
