--- a/style.scss
+++ b/style.scss
@@ -135,7 +135,7 @@ $guide-pink: #f9a8d4;
         // The Trigger Button
         .dropdown-button {
             width: 100%;
-            padding: 0 15px;
+            padding-left: 15px;
             background-color: $bg-input;
             border: 1px solid $border-color;
             border-radius: 6px;
@@ -148,7 +148,7 @@ $guide-pink: #f9a8d4;
             color: $text-main;
             box-sizing: border-box;
             transition: border-color 0.2s;
-
+            gap: 10px;
             &:hover {
                 border-color: $border-hover;
             }
