--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
       color: #0f766e;
       padding: 6px 14px;
       border-radius: 999px;
-      font-size: 0.9rem;
+      font-size: 13px;
       font-weight: 500; }
       .filter-widget .tags-container .tag .tag-close {
         margin-left: 8px;
