--- a/style.scss
+++ b/style.scss
@@ -135,7 +135,7 @@ $guide-pink: #f9a8d4;
         // The Trigger Button
         .dropdown-button {
             width: 100%;
-            padding-left: 15px;
+            padding: 0 0 0 15px;
             background-color: $bg-input;
             border: 1px solid $border-color;
             border-radius: 6px;
