--- a/style.css
+++ b/style.css
@@ -120,8 +120,11 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
       .filter-widget .dropdown-container .dropdown-button.open .arrow {
         transform: rotate(-135deg);
         margin-top: 4px; }
+    .filter-widget .dropdown-container.select-filter {
+      display: none; }
+      .filter-widget .dropdown-container.select-filter.show {
+        display: block; }
     .filter-widget .dropdown-container .checkbox-lists {
-      display: none;
       position: absolute;
       top: 100%;
       left: 0;
@@ -134,8 +137,6 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
       overflow-y: auto;
       z-index: 10;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
-      .filter-widget .dropdown-container .checkbox-lists.show {
-        display: block; }
       .filter-widget .dropdown-container .checkbox-lists .checkbox-list-item {
         padding: 5px 10px;
         cursor: pointer;
