--- a/style.scss
+++ b/style.scss
@@ -179,9 +179,10 @@ $guide-pink: #f9a8d4;
 
         &.select-filter {
             display: none; // Hidden by default
-
-            &.show {
-                display: block;
+            .checkbox-lists {
+                &.show {
+                    display: block;
+                }
             }
         }
         // The Dropdown Menu List
